--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
 <body>
   <div id="app"></div>
   <svg id="radar"></svg>
-<script type="text/javascript" src="main.js"></script></body>
+</body>
 
 <table>
   <tr>
