feat(tags): add material-ut Chip to visualize tags

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
   <link rel="shortcut icon" href="https://www.gravatar.com/avatar/52169f15cf34f0459f7a3da01655f652">
 
   <script src="./vendor/d3.v4.min.js"></script>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
 </head>
 
 <body>
