--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 
 <body>
   <div id="app"></div>
-  <svg id="radar"></svg>
+  <svg id="radar" width="100%" height="100%" viewBox="0 0 1450 800"></svg>
   <div id="description"></div>
 </body>
 
