--- a/public/index.html
+++ b/public/index.html
@@ -2,19 +2,10 @@
 <html lang="en">
 
 <head>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-132541366-1"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
-    gtag('js', new Date());
-
-    gtag('config', 'UA-132541366-1');
-  </script>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <title>Grzegorz Marchwiński - tech radar</title>
-  <link rel="shortcut icon" href="https://www.gravatar.com/avatar/52169f15cf34f0459f7a3da01655f652">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+  <title>Big Baobab - Technology Radar</title>
+  <link rel="shortcut icon" href="https://avatars3.githubusercontent.com/u/5393912?s=200&v=4">
+  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
   <!--
@@ -36,7 +27,7 @@
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="app"></div>
-  <svg id="radar" width="100%" height="100%" viewBox="0 0 1450 800"></svg>
+  <svg id="radar" width="100%" height="100%" viewBox="0 0 1450 1050"></svg>
   <div id="description"></div>
 
 </html>
