--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta http-equiv="Content-type" content="text/html; charset=utf-8">
-  <title>Big Baobab - Technology Radar</title>
+  <title>Technology Radar</title>
   <link rel="shortcut icon" href="https://avatars3.githubusercontent.com/u/5393912?s=200&v=4">
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
